# Avisynth-

avs_core/convert/: convert_bits.cpp  convert_matrix.cpp  convert_planar.cpp  convert_rgb.cpp
avs_core/convert/intel/: convert_planar_avx2.cpp  convert_planar_sse.cpp  convert_rgb_avx2.cpp  convert_rgb_avx2.h
avs_core/core/: avs_simd_c.h  info.cpp
avs_core/filters/: edit.cpp  fps.cpp  layer.cpp  layer.h  layer.hpp  merge.cpp  merge.h  planeswap.cpp  resample.cpp  source.cpp
avs_core/filters/intel/: layer_avx2.cpp  layer_avx2.h  layer_sse.cpp  layer_sse.h  layer_sse41.cpp  layer_sse41.h  merge_avx2.cpp  merge_avx2.h  merge_sse.cpp  merge_sse.h  planeswap_avx2.cpp  planeswap_avx2.h  planeswap_sse.cpp  planeswap_sse.h  resample_avx512.h  resample_avx512b.cpp
avs_core/filters/overlay/: OF_blend.cpp  blend_common.cpp  blend_common.h  imghelpers.h  overlay.cpp  overlayfunctions.h
avs_core/filters/overlay/aarch64/: blend_common_neon.cpp  blend_common_neon.h  layer_neon.cpp  layer_neon.h
avs_core/filters/overlay/intel/: blend_common_avx2.cpp  blend_common_avx2.h  blend_common_sse.cpp  blend_common_sse.h  masked_merge_avx2_impl.hpp  masked_merge_sse41_impl.hpp  masked_rowprep_avx2.cpp  masked_rowprep_avx2.h  masked_rowprep_sse41.cpp  masked_rowprep_sse41.h
distrib/Readme/: readme_history.txt
distrib/docs/english/source/avisynthdoc/: changelist376.rst
distrib/docs/english/source/avisynthdoc/corefilters/: layer.rst  overlay.rst
plugins/DirectShowSource/: CMakeLists.txt  directshow_source.h
